--- a/_layouts/inicio.html
+++ b/_layouts/inicio.html
@@ -74,8 +74,9 @@
       }
 
       .almost-100vh {
-        min-height: calc(100vh - 3rem);
-        min-height: calc(100svh - 3rem);
+        min-height: calc(100vh - 6rem);
+        min-height: calc(100svh - 6rem);
+        /* -6rem para que haya un balance, deberían ser mt 3 + paddings (2 y 2) */
         padding: var(--padding);
       }
 
