--- a/_includes/tools1.html
+++ b/_includes/tools1.html
@@ -2,14 +2,14 @@
 
   {% for group in site.data.ui.tools[page.lang] %}
   <li class="">
-    <h3>{{group[0] | upcase}}</h3>
+    <h3>{{group[0]}}</h3>
 
     <ul class="flex-row-wrap-gap1">
 
       {% for item in group [1] %}
       <li class="round has-glow">
         <svg aria-hidden="true">
-          <title>{{item}}</title>
+          <title>{{item|upcase}}</title>
           <use xlink:href="#{{item}}" />
         </svg>
         <!-- <small>{{item}}</small> -->
@@ -69,6 +69,9 @@
     </symbol>
     <symbol id="Git" viewBox="0 0 24 24">
       <path d="M23.546 10.93L13.067.452c-.604-.603-1.582-.603-2.188 0L8.708 2.627l2.76 2.76c.645-.215 1.379-.07 1.889.441.516.515.658 1.258.438 1.9l2.658 2.66c.645-.223 1.387-.078 1.9.435.721.72.721 1.884 0 2.604-.719.719-1.881.719-2.6 0-.539-.541-.674-1.337-.404-1.996L12.86 8.955v6.525c.176.086.342.203.488.348.713.721.713 1.883 0 2.6-.719.721-1.889.721-2.609 0-.719-.719-.719-1.879 0-2.598.182-.18.387-.316.605-.406V8.835c-.217-.091-.424-.222-.6-.401-.545-.545-.676-1.342-.396-2.009L7.636 3.7.45 10.881c-.6.605-.6 1.584 0 2.189l10.48 10.477c.604.604 1.582.604 2.186 0l10.43-10.43c.605-.603.605-1.582 0-2.187" />
+    </symbol>
+    <symbol id="Github" viewBox="0 0 24 24">
+      <path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4 M9 18c-4.51 2-5-2-7-2">
     </symbol>
     <symbol id="HTML5" viewBox="0 0 24 24">
       <path d="M1.5 0h21l-1.91 21.563L11.977 24l-8.564-2.438L1.5 0zm7.031 9.75l-.232-2.718 10.059.003.23-2.622L5.412 4.41l.698 8.01h9.126l-.326 3.426-2.91.804-2.955-.81-.188-2.11H6.248l.33 4.171L12 19.351l5.379-1.443.744-8.157H8.531z" />
