--- a/styles/css/header.css
+++ b/styles/css/header.css
@@ -7,12 +7,12 @@
 .on-the-left {
   position: absolute;
   min-width: 18ch;
-  left: 2rem;
+  left: 1rem;
 }
 
 .on-the-right {
   position: absolute;
-  right: 2rem;
+  right: 1rem;
   min-width: 18ch;
 }
 
@@ -29,12 +29,14 @@ header {
 
   .on-the-left {
     position: fixed;
-    left: 1rem;
+    left: 2rem;
+    z-index: 9;
   }
 
   .on-the-right {
     position: fixed;
-    right: 1rem;
+    right: 2rem;
+    z-index: 9;
   }
 
 }
