--- a/styles/css/inicio.css
+++ b/styles/css/inicio.css
@@ -1,9 +1,9 @@
 :root {
-  /* --size: clamp(10rem, 1rem + 40vmin, 30rem); */
-  --size: clamp(5rem, 1rem + 10vmin, 10rem);
-  /* --size: 10vmin; */
-  /* --gap: calc(var(--size) / 14); */
-  --gap: 1.5rem;
+  --marquee-size: clamp(5rem, 1rem + 10vmin, 10rem);
+  --marquee-gap: 1.5rem;
+  --duration: 20s;
+  --scroll-start: 0;
+  --scroll-end: calc(-100% - var(--marquee-gap));
 
 }
 
@@ -19,6 +19,8 @@
   --border-radius: .5rem !important;
   --border-radius-small: .2rem !important;
 
+  --space-small: 1rem;
+  --space: 2rem;
 }
 
 [data-dark=false]:root {
@@ -79,30 +81,16 @@
   --cursorHPosition: 50%;
   --cursorVPosition: 50%;
 
-  /* --animation: .2s; */
   --playState: running;
   --transition-speed: .2s;
-
-
-  /* marquee */
-  --duration: 20s;
-  --scroll-start: 0;
-  --scroll-end: calc(-100% - var(--gap));
 }
 
 [data-motion=false]:root {
   --cursorHPosition: 50%;
   --cursorVPosition: 50%;
 
-  /* --animation: 0; */
   --playState: paused;
   --transition-speed: 0s;
-
-  /* marquee */
-  --duration: 20s;
-  /* deben ser existir y ser iguales aqui tambien o en un :root general */
-  --scroll-start: 0;
-  --scroll-end: calc(-100% - var(--gap));
 }
 
 
@@ -312,39 +300,7 @@ h3 {
 
 
 /* NAV */
-.inicio nav {
-  /* background-color: white; */
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  margin-left: auto;
-}
 
-/* 
-nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: var(--gap);
-} */
-
-header a {
-  /* height: var(--size); */
-}
-
-
-
-
-/* .has-limited-width {
-  max-width: 43rem;
-} */
-
-.mia {
-  margin-inline: auto;
-}
 
 /* HERO */
 
@@ -438,7 +394,7 @@ p strong {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  gap: var(--gap);
+  gap: var(--marquee-gap);
   -webkit-mask-image: -webkit-gradient(linear,
       left top, left bottom,
       from(var(--mask-direction, to right)),
@@ -463,7 +419,7 @@ p strong {
       hsl(0 0% 0% / 1) 20%,
       hsl(0 0% 0% / 1) 80%,
       hsl(0 0% 0% / 0));
-  min-height: var(--size);
+  min-height: var(--marquee-size);
 }
 
 .marquee-list {
@@ -477,7 +433,7 @@ p strong {
   align-items: center;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  gap: var(--gap);
+  gap: var(--marquee-gap);
   min-width: 0;
   /* minwidthaqui o establecer flexproperties of grow en hijos */
   -webkit-animation: scroll-x var(--duration) linear infinite;
@@ -496,40 +452,18 @@ p strong {
 
 
 @media (prefers-reduced-motion: reduce) {
-  .marquee-list {
+  /* .marquee-list {
     -webkit-animation-play-state: paused;
     animation-play-state: paused;
   }
+ */
 }
 
-.marquee--vertical {
-  --mask-direction: to bottom;
-  overflow-y: hidden;
-  /* padding: 0 2rem; */
-  min-width: var(--size);
-  -ms-flex-negative: 0;
-  flex-shrink: 0;
-
+[data-motion=false] .marquee-list {
+  -webkit-animation-play-state: paused;
+  animation-play-state: paused;
 }
 
-.marquee--vertical,
-.marquee--vertical .marquee-list {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-}
-
-.marquee--vertical .marquee-list {
-  -webkit-animation-name: scroll-y;
-  animation-name: scroll-y;
-}
-
-.marquee--reverse .marquee-list {
-  animation-direction: reverse;
-  -webkit-animation-delay: -3s;
-  animation-delay: -3s;
-}
 
 @-webkit-keyframes scroll-x {
   from {
@@ -555,29 +489,6 @@ p strong {
   }
 }
 
-@-webkit-keyframes scroll-y {
-  from {
-    -webkit-transform: translateY(var(--scroll-start));
-    transform: translateY(var(--scroll-start));
-  }
-
-  to {
-    -webkit-transform: translateY(var(--scroll-end));
-    transform: translateY(var(--scroll-end));
-  }
-}
-
-@keyframes scroll-y {
-  from {
-    -webkit-transform: translateY(var(--scroll-start));
-    transform: translateY(var(--scroll-start));
-  }
-
-  to {
-    -webkit-transform: translateY(var(--scroll-end));
-    transform: translateY(var(--scroll-end));
-  }
-}
 
 .marquee-li {
   display: grid;
@@ -603,8 +514,8 @@ p strong {
 }
 
 .li-inner {
-  min-width: var(--size);
-  padding: calc(var(--size) / 7) calc(var(--size) / 5);
+  min-width: var(--marquee-size);
+  padding: calc(var(--marquee-size) / 7) calc(var(--marquee-size) / 5);
   /* tres: top sides bottom */
   /* background-color: pink; */
 }
@@ -619,13 +530,6 @@ p strong {
   scale: 1.1;
 }
 
-
-
-.marquee--vertical svg {
-  aspect-ratio: 1;
-  width: calc(var(--size) / 1.5);
-  padding: calc(var(--size) / 6);
-}
 
 /* Parent wrapper */
 .wrapper {
@@ -708,61 +612,6 @@ p strong {
 /* TOGGLE STYLES */
 
 
-@media screen and(min-width:30rem) {}
-
-/* o .header */
-
-
-/* sin usar */
-.toggle {
-  display: block;
-  position: relative;
-  /* position: fixed;
-  top: 1rem;
-  left: 1rem; */
-  width: var(--size);
-  height: var(--size);
-  font: inherit;
-  text-align: center;
-  cursor: pointer;
-  outline: none;
-  border: none;
-  border-radius: 50%;
-  color: var(--color2);
-  background-color: var(--bg2);
-  z-index: 1;
-}
-
-.toggle:focus-visible {
-  -webkit-box-shadow: 0 0 0 2px var(--color);
-  box-shadow: 0 0 0 2px var(--color);
-}
-
-.toggle svg {
-  --size: 2.5rem;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: var(--size);
-  height: var(--size);
-  fill: currentcolor;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  -webkit-transition: -webkit-transform 300ms cubic-bezier(0.25, 1, 0.5, 1);
-  transition: -webkit-transform 300ms cubic-bezier(0.25, 1, 0.5, 1);
-  -o-transition: transform 300ms cubic-bezier(0.25, 1, 0.5, 1);
-  transition: transform 300ms cubic-bezier(0.25, 1, 0.5, 1);
-  transition: transform 300ms cubic-bezier(0.25, 1, 0.5, 1), -webkit-transform 300ms cubic-bezier(0.25, 1, 0.5, 1);
-}
-
-.toggle--vertical svg {
-  -webkit-transform: translate(-50%, -50%) rotate(-90deg);
-  -ms-transform: translate(-50%, -50%) rotate(-90deg);
-  transform: translate(-50%, -50%) rotate(-90deg);
-}
-
-
 /* KEYFRAMES */
 
 @-webkit-keyframes fade {
@@ -823,37 +672,36 @@ p strong {
 
 
 .tools {
-  --gap: 3rem;
+  --gap: .5rem;
+  /* gap entre sublistas */
   padding-bottom: 2rem;
   /* para que la seccion debajo de esta no se vea afectada por los shadows*/
 }
 
-/* .tools ul {
-  --gap: 1rem;
-  justify-content: center;
-} */
-
 
 .tools>li>ul {
   --gap: 1.2rem;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
+  --gap: min(.5rem, 1vmin);
+
+
   justify-content: center;
+  /* antes center */
 }
 
 /* son los items */
 .tools ul>li {
 
-  /* background-color: pink; */
   text-align: center;
-  /* background-color: var(--bg-glass); */
-  /* border: var(--border-glass); */
   border-radius: var(--border-radius, .6rem);
-  padding: 1rem 1.2rem .5rem;
-  /* este padding ayuda a que se vea balanceado, el svg con el texto debajo */
+  /* padding: 1rem 1.2rem .5rem; */
+  /* este padding ayuda a que se vea balanceado, el svg con el texto debajo 
+  ahora, solo el svg, lleva padding, asi hay mas espacio para el texto*/
 
-  /* define el width del svg de dentro */
-  width: 7rem;
+
+  /* width: min(7rem, 10vw); */
+  width: fit-content;
+  /* basado en width del small en svg+small */
+
   -webkit-transition: all var(--transition-speed) ease;
   -o-transition: all var(--transition-speed) ease;
   transition: all var(--transition-speed) ease;
@@ -864,12 +712,17 @@ p strong {
 }
 
 .tools svg {
-  /* width: 2rem; */
-  width: 100%;
-  aspect-ratio: 1;
+
   margin-inline: auto;
   display: block;
-  /* important */
+  /* width: 6rem; */
+  display: block;
+  padding: 1rem 2rem 0rem;
+  /* manipulamos el ancho mediante el padding */
+
+
+  fill: var(--bg4);
+  /* DISPLAY GRID EN HOVER?????????????? */
 }
 
 
@@ -882,17 +735,19 @@ svg {
 .tools svg+small {
   text-align: center;
   color: var(--color);
+
+  width: 6rem;
+  display: block;
 }
 
 /* glow */
 .round {
   background-color: var(--bg-accent);
   border-radius: .2rem;
-  /* padding: 1rem; */
   outline: .2rem solid;
 }
 
-.tools-wrapper {
+/* .tools-wrapper {
   --icon-width: min(3rem, 25%);
 
   display: -webkit-box;
@@ -910,17 +765,8 @@ svg {
   gap: 1.5rem;
 
   height: 100%;
-}
+} */
 
-.tools-wrapper>li {
-
-  width: var(--icon-width);
-  height: auto;
-  position: static;
-  -webkit-transform: none !important;
-  -ms-transform: none !important;
-  transform: none !important;
-}
 
 .has-glow {
   --shadow-x-pos: 0;
@@ -941,7 +787,12 @@ svg {
 .tools>li {
   --shadow1: rgba(137, 235, 161, 0.24);
   --shadow2: rgba(168, 193, 241, 0.32);
+
+  background: var(--shadow1);
+  padding: 1em 1em 1.5em;
+  border-radius: 1em;
 }
+
 
 
 [data-dark=true] .tools>li {
