--- a/styles/css/layout.css
+++ b/styles/css/layout.css
@@ -7,6 +7,10 @@ section {
   padding-inline: 2rem;
 }
 
+.mia {
+  margin-inline: auto;
+}
+
 .is-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
